--- a/porerefiner/porerefiner.app.service
+++ b/porerefiner/porerefiner.app.service
@@ -6,7 +6,7 @@ After=porerefiner.service
 [Service]
 Type=notify
 # the specific user that our service will run as
-User=porerefiner.app
+User=porerefiner
 Group=porerefiner
 # another option for an even more restricted service is
 # DynamicUser=yes
