--- a/porerefiner/porerefiner.app.service
+++ b/porerefiner/porerefiner.app.service
@@ -6,13 +6,13 @@ After=porerefiner.service
 [Service]
 Type=notify
 # the specific user that our service will run as
-User=porerefiner
-Group=porerefiner
+# User=porerefiner
+# Group=porerefiner
 # another option for an even more restricted service is
 # DynamicUser=yes
 # see http://0pointer.net/blog/dynamic-users-with-systemd.html
 RuntimeDirectory=gunicorn
-WorkingDirectory=/home/porerefiner/applicationroot
+# WorkingDirectory=/home/porerefiner/applicationroot
 ExecStart=/usr/bin/gunicorn applicationname.wsgi
 ExecStop=/bin/kill -s QUIT $MAINPID
 ExecReload=/bin/kill -s HUP $MAINPID
