--- a/porerefiner/porerefiner.service
+++ b/porerefiner/porerefiner.service
@@ -8,7 +8,7 @@ Type=simple
 # User=porerefiner
 # Group=porerefiner
 # WorkingDirectory=/home/porerefiner
-ExecStart=/usr/bin/python3.7 -m porerefiner.porerefiner -v start --config $POREREFINER_CONFIG
+ExecStart=/usr/bin/env python3.7 -m porerefiner.porerefiner -v start --config $POREREFINER_CONFIG
 ExecStop=/bin/kill -s QUIT $MAINPID
 Restart=on-failure
 Environment=PYTHONUNBUFFERED=1
