--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,4 +1,4 @@
-pip==19.2.3
+pip==21.1.2
 bump2version==0.5.11
 wheel==0.33.6
 watchdog==0.9.0
@@ -8,4 +8,5 @@ coverage==4.5.4
 Sphinx==1.8.5
 twine==1.14.0
 hypothesis-fspaths==0.1
+grpcio-tools==1.38.1
 -e .
