--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ Homepage = 'https://github.com/CFSAN-Biostatistics/porerefiner'
 test = [    'hypothesis~=4.57.1',
             'hypothesis-fspaths~=0.1',
             'Mock~=4.0.0',
-            'aiounittest~=1.3.0']
+            'pytest-asyncio~=0.23.8']
 dev = [ 'grpcio-tools',
         'configparser',
         'pytest',
